move the code to server folder

--- a/server/fc_server_config.json
+++ b/server/fc_server_config.json
@@ -10,7 +10,7 @@
     "devices": [
         {
             "type": "fadecandy",
-            "serial": "IKOMDNPBAGRXZPKR",
+            "serial": "LZWBOCCGHFBJTVEL",
             "led": false,
             "map": [
                 [ 0, 0, 0, 10 ]
