add second fadecandy

--- a/server/fc_server_config.json
+++ b/server/fc_server_config.json
@@ -18,9 +18,9 @@
         },
         {
             "type": "fadecandy",
-            "serial": "VJXDWGNPGKBXZNYH",
+            "serial": "HBZXKMXJSWFVFZWX",
             "map": [
-                [ 0, 30, 64, 30 ]
+                [ 0, 512, 0, 46 ]
                 
             ]
         }
